@startuml classDiagram
class ChatMessage {
    long Id
    string GameId
    long SenderId
    User Sender
    string Content
    DateTime Timestamp
    Game Game
}

class ChessEngine {
    long Id
    string EngineName
}

class Game {
    Game()
    string Id
    long? FirstPlayerId
    long? SecondPlayerId
    long? EngineId
    bool IsFirstPlayerWhite
    User FirstPlayer
    User SecondPlayer
    ChessEngine Engine
    string Fen
    string Status
    DateTime StartTime
    bool IsPrivate
    int EngineDepth
    ICollection<ChatMessage> ChatMessages
}

class User {
    long Id
    string UserName
    // games as black
}

ChatMessage --> User : Sender
ChatMessage --> Game
Game --> User : FirstPlayer
Game --> User : SecondPlayer
Game --> ChessEngine : Engine
Game --> ChatMessage : ChatMessages
@enduml
